<!--
  ~ Copyright (C) 2018 Elliot Tormey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
  <string name="app_name">Lekkie</string>
  <string name="title_activity_outage_map">Map</string>

  <string name="search">Search</string>

  <!-- sheet_gdpr -->
  <string name="data_collection">Data collection</string>
  <string name="gdpr_explanation">To better allow us to optimise, monitor performance and be notified of any crashes
        occurring in the wild, we would like to collect some anonymize data related to your interaction with this app.
        To get a more detailed explanation please read our Privacy Policy.
    </string>
  <string name="performance_metrics">Performance metrics</string>
  <string name="crash_reporting">Crash reporting</string>
  <string name="analytics">Analytics</string>
  <string name="accept">Accept</string>

  <!-- OutageListRecyclerAdapter.kt -->
  <string name="est_restore">Est restore: %s</string>
  <string name="started">Started: %s</string>

  <!-- OutageListFragmentt -->
  <string name="outage_count">%d outages</string>

  <!-- controller_info.xml -->
  <string name="info">Info</string>
  <string name="export_database">Export database</string>
  <string name="sync_interval">Sync Interval</string>
  <string name="sync_hours">%d hours</string>
  <string name="chucker">Chucker</string>
</resources>
