<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Elliot Tormey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/info"
    app:titleTextColor="@color/white" />

  <TextView
    android:id="@+id/tvDataCollection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingStart="@dimen/horizontal_spacing"
    android:paddingTop="@dimen/vertical_spacing"
    android:paddingEnd="@dimen/horizontal_spacing"
    android:paddingBottom="@dimen/vertical_spacing"
    android:text="@string/data_collection"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

  <TextView
    android:id="@+id/tvExportDatabase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingStart="@dimen/horizontal_spacing"
    android:paddingTop="@dimen/vertical_spacing"
    android:paddingEnd="@dimen/horizontal_spacing"
    android:paddingBottom="@dimen/vertical_spacing"
    android:text="@string/export_database"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvDataCollection" />

  <TextView
    android:id="@+id/tvSyncInterval"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingStart="@dimen/horizontal_spacing"
    android:paddingTop="@dimen/vertical_spacing"
    android:paddingEnd="@dimen/horizontal_spacing"
    android:paddingBottom="@dimen/vertical_spacing"
    android:text="@string/sync_interval"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvExportDatabase" />

  <TextView
    android:id="@+id/tvSyncMins"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/horizontal_spacing"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
    app:layout_constraintBottom_toBottomOf="@id/tvSyncInterval"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/tvSyncInterval"
    tools:text="1 hour" />

</androidx.constraintlayout.widget.ConstraintLayout>